--- a/curso-react/public/manifest.json
+++ b/curso-react/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React Básico",
+  "name": "Curso React Básico",
   "icons": [
     {
       "src": "favicon.ico",
