--- a/curso-react/package.json
+++ b/curso-react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.8",
     "json-server": "^1.0.0-beta.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "mock":"json-server ./mock/db.json"
+    "mock": "json-server ./mock/db.json --port 3333"
   },
   "eslintConfig": {
     "extends": [
