--- a/curso-materialui/package.json
+++ b/curso-materialui/package.json
@@ -14,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,8 +23,11 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "eslint": "^9.3.0",
+    "eslint-plugin-react": "^7.34.1",
     "globals": "^15.3.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^7.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
